# python_virtual_machine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
__pycache__/: test_class.py  test_func.py  test_func_2.py  test_func_3.py  test_func_4.py  test_if.py  test_list.py  test_loop.py  test_native.py  test_string.py  test_var.py
code/: BinaryFileParser.cpp  BinaryFileParser.hpp  ByteCode.hpp  CodeObject.cpp  CodeObject.hpp
object/: Integer.cpp  Integer.hpp  Klass.cpp  Klass.hpp  List.cpp  List.hpp  Object.cpp  Object.hpp  String.cpp  String.hpp
runtime/: FrameObject.cpp  FrameObject.hpp  FunctionObject.cpp  FunctionObject.hpp  Interpreter.cpp  Interpreter.hpp  Universe.cpp  Universe.hpp
utils/: ArrayList.cpp  ArrayList.hpp  BufferedInputStream.hpp  Map.cpp  Map.hpp  Print.cpp  Print.hpp
